# django-restapi-engine

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
django_db_backend_restapi/: __init__.py  base.py  compiler.py  cursor.py  rest_api_handler.py
django_restapi_engine/: base.py  compiler.py  rest_api_handler.py
example_projects/jsonplaceholder_project/: README.md  requirements.txt
example_projects/jsonplaceholder_project/mysite/: settings.py  urls.py
example_projects/jsonplaceholder_project/todos/: admin.py  models.py  rest_handler.py  views.py
example_projects/jsonplaceholder_project/todos/management/commands/: fetch_todo.py
example_projects/jsonplaceholder_project/todos/migrations/: 0001_initial.py
example_projects/jsonserver-project/: README.md  db.json  requirements.txt
example_projects/jsonserver-project/movies/: admin.py  models.py  rest_handler.py  views.py
example_projects/jsonserver-project/mysite/: settings.py  urls.py
example_projects/jsonserver-project/mysite/fixtures/: initial_data.yaml
mysite/: settings.py
tests/: conftest.py  test_rest_api_handler.py
todos/: admin.py  models.py  rest_handler.py  views.py
todos/management/commands/: fetch_todo.py
todos/migrations/: 0001_initial.py
