[tool.poetry]
name = "django-restapi-engine"
version = "0.1.0"
description = ""
authors = ["Jan-Age <jan-age@tiqets.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
django = "3.2.9"
sqlparse = "0.4.2"
pdbpp = "^0.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
