[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-restapi-engine"
dynamic = ["version"]
description = "Use any RestAPI as basic Django Database Engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Jan-Age Laroo" },
]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "Django>=3.2",
]

[project.urls]
Documentation = "https://github.com/laroo/django-restapi-engine"
Homepage = "https://github.com/laroo/django-restapi-engine"
Source = "https://github.com/laroo/django-restapi-engine"
Tracker = "https://github.com/laroo/django-restapi-engine/issues"

[tool.hatch.version]
path = "django_restapi_engine/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/django_restapi_engine",
]

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "pytest-django",
  "pre-commit",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report --show-missing",
]
cov = [
  "test-cov",
  "cov-report",
]

[tool.hatch.envs.all]
# type = "container"

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11"]
django = ["3.2", "4.0", "4.2"]

[tool.hatch.envs.all.overrides]
matrix.django.dependencies = [
    { value = "django~={matrix:django}.0" },
]

[tool.black]
line-length = 120
target-version = ['py39']
